<resources>
    <string name="app_name">TERA Universe</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="action_help">Help</string>
    <string name="info_dev">Developed by Sanoyan JEYAKUMAR and Johnathan NADARAJAH</string>
    <string name="good_bye">Good bye !</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_fb">TeraU - Media</string>
    <string name="cinema_showtimes">Cinema Showtimes</string>
    <string name="facebook_tera">TERA Universe Facebook page</string>
    <string name="movies_tera">Movies details</string>
    <string name="web_tera">TERA Universe Website</string>
    <string name="insta_tera">TERA Universe Instagram</string>
    <string name="twitter_tera">TERA Universe Twitter page</string>
    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="title_activity_cine">Cinema Showtimes</string>
    <string name="ok">ok</string>
    <string name="help">Help</string>

    <string name="m_facebook">Facebook</string>
    <string name="m_movie">Movies details</string>
    <string name="m_instagram">Instagram</string>
    <string name="m_twitter">Twitter</string>
    <string name="m_web">Website</string>
    <string name="m_settings">Settings</string>
    <string name="title_activity_tabbed">TabbedActivity</string>
    <string name="section_format">Hello World from section: %1$d</string>

    <string name="download_tera">TERA Download Page</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="download_pdf">Download the PDF</string>
    <string name="type_note">Type notes</string>
    <string name="notes">Notes</string>
    <string name="save">Save</string>
    <string name="saved">Saved</string>
    <string name="shared_preferences">Shared Preferences</string>
    <string name="home_msg_text">Welcome to TERA Universe App</string>
    <string name="yt_tera">TERA Universe YouTube channel</string>
    <string name="m_youtube">YouTube</string>
    <string name="movie_name">Movie name</string>
    <string name="add">Add</string>
    <string name="view_movies">View movies</string>
    <string name="empty_field">The field can\'t be empty</string>
    <string name="data_inserted">Data inserted in SQLITE</string>
    <string name="error_inserting">Error while data inserting</string>
    <string name="empty_list">Empty list</string>
    <string name="save_sqlite">Save in SQLITE</string>
    <string name="moviesToWatch">Have to watch</string>
    <string name="movieList">List of movies to watch</string>
    <string name="make_a_call">Make a call</string>
    <string name="call_123456789">Call 123456789</string>
</resources>
