<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_facebook"
            android:icon="@drawable/btn_fb"
            android:title="@string/m_facebook" />
        <item
            android:id="@+id/nav_movie"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/m_movie" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ic_menu_gallery"
            android:title="Gallery" />
        <item
            android:id="@+id/nav_manage"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/m_settings" />
    </group>

    <item android:title="Sauvegarde">
        <menu>
            <item
                android:id="@+id/shared_pref"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/shared_preferences" />
            <item
                android:id="@+id/nav_help"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/help" />
        </menu>
    </item>

</menu>
